fixed maven project build